Add examples of ro-crate-py, fix missing author

--- a/dataset_ro-crate.ipynb
+++ b/dataset_ro-crate.ipynb
@@ -82,10 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%%capture` not found.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os.path\n",
     "%%capture\n",
     "# The JSON-LD object consists of the '{}' brackets and everything contained between them (that's what would be written in ro-crate-metadata.json)\n",
     "{ \"@context\": \"https://w3id.org/ro/crate/1.1/context\",\n",
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +237,7 @@
     "          \"@id\": \"./\",\n",
     "          \"identifier\": \"https://doi.org/10.4225/59/59672c09f4a4b\",\n",
     "          \"@type\": \"Dataset\",\n",
+    "          \"author\": {\"@id\": \"https://orcid.org/0000-0002-9951-6765\"},\n",
     "          \"datePublished\": \"2017\",\n",
     "          \"name\": \"EU Ecosystem Assessment - Invasive Alien Species\",\n",
     "          \"description\": \"A spatially explicit cross-cutting indicator that quantifies the cumulative and relative pressure by IAS on terrestrial and freshwater ecosystems, by means of a unitless figure related to the relative extent of each ecosystem type negatively affected, over a reference grid of 10 km spatial resolution.\",\n",
@@ -329,6 +339,12 @@
     "          \"@type\": \"Dataset\"\n",
     "      },\n",
     "      {\n",
+    "          \"@id\": \"https://orcid.org/0000-0002-9951-6765\",\n",
+    "          \"@type\": \"Person\",\n",
+    "          \"affiliation\": \"European Commission Joint Research Centre Ispra: Ispra, Lombardia, IT\",\n",
+    "          \"name\": \"Grazia Zulian\"\n",
+    "      },\n",
+    "      {\n",
     "          \"@id\": \"http://creativecommons.org/licenses/by/4.0/\",\n",
     "          \"@type\": \"CreativeWork\",\n",
     "          \"description\": \"This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.\",\n",
@@ -380,6 +396,7 @@
     "- Some FAIR principles have not been tackled yet, mainly those concerning where the (meta)data will live and how it will be accessed (F4, A1, A1.1, A1.2, A2), but also regarding references to other (meta)data (I3) and provenance information (R1.2). Those are strongly dependent on the scientific domain and would require guides of their own, and so are left unconsidered here.\n",
     "- Particularly, the entries for data entities (files and directories) could be greatly extended with more information describing scientific aspects that were overlooked here for simplicity and lack of domain expertise.\n",
     "- There's also the packaging format. A simple way would be to bundle the RO-Crate as a ZIP file, but there are many other options. For example, [HDF5](https://www.hdfgroup.org/solutions/hdf5/) and [BagIT](https://datatracker.ietf.org/doc/rfc8493/) are more advanced options.\n",
+    "- After packaging the RO-Crate, it should be uploaded to an appropriate repository and given its own persistent identifier (PID). Again, that's out of the scope for now.\n",
     "\n",
     "As previously mentioned, there are plenty of other cases in terms of data sources, but also workflows, models, software... More materials will be uploaded regularly covering all those cases. Last but not least, below you can find the resulting FAIRness status."
    ]
@@ -436,9 +453,158 @@
     "There are some tools and libraries that could be used to avoid creating the RO-Crate and writing the `ro-crate-metadata.json` file manually. For a list of other available tools, visit the [documentation](https://www.researchobject.org/ro-crate/tools/) ([JSON-LD's documentation](https://json-ld.org/#developers) might also list some useful tools, but beware that those have a greater scope than RO-Crates and are probably more complex). Most of them are still fairly recent and need to mature. To highlight a couple of them:\n",
     "- [Describo Online](https://arkisto-platform.github.io/describo-online/): a browser-based application to create and update RO-Crates. It provides a Graphical User Interface to fill in the metadata and browse the content of the crate.\n",
     "- [Describo desktop](https://arkisto-platform.github.io/describo/): the desktop application of Describo. Its development is not so active anymore.\n",
-    "- [`ro-crate-py`](https://github.com/researchobject/ro-crate-py): a Python module that provides some basic functionality to create and manage RO-Crates directly from Python scripts (and also a command line interface), however, it's still at an early stage and documentation is very lacking.\n",
+    "- [`ro-crate-py`](https://github.com/researchobject/ro-crate-py): a Python module that provides some basic functionality to create and manage RO-Crates directly from Python scripts (and also a command line interface), however, it's still at an early stage and documentation is lacking. Example usage can be found below.\n",
     "- [dataspice](https://docs.ropensci.org/dataspice/): an R package for creating basic metadata files for datasets by editing CSV files. The result is not quite a valid RO-Crate (notably filenames are missing), but kind of 80% there."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Appendix: Working with RO-Crates in Python\n",
+    "The Python-specific module `ro-crate-py` offers functionality to create RO-Crates directly from code. Below you can find the code necessary to replicate the RO-Crate created in the first part of the guide using `ro-crate-py`:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from rocrate.rocrate import ROCrate\n",
+    "\n",
+    "newCrate = ROCrate()\n",
+    "root_directory = newCrate.add_directory('IAS')\n",
+    "readme = newCrate.add_file(\"IAS/readme.txt\")\n",
+    "\n",
+    "from rocrate.model.person import Person\n",
+    "author_orcid = \"https://orcid.org/0000-0002-9951-6765\"\n",
+    "author = newCrate.add(Person(newCrate, author_orcid, properties={\n",
+    "    \"name\": \"Grazia Zulian\",\n",
+    "    \"affiliation\": \"European Commission Joint Research Centre Ispra: Ispra, Lombardia, IT\"\n",
+    "}))\n",
+    "\n",
+    "from rocrate.model.contextentity import ContextEntity\n",
+    "license_id = \"http://creativecommons.org/licenses/by/4.0/\"\n",
+    "license = newCrate.add(ContextEntity(newCrate, license_id, properties={\n",
+    "    \"@type\": \"CreativeWork\",\n",
+    "    \"description\": \"This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.\",\n",
+    "    \"identifier\": \"http://creativecommons.org/licenses/by/4.0/\",\n",
+    "    \"name\": \"Attribution 4.0 International (CC BY 4.0)\"\n",
+    "}))\n",
+    "\n",
+    "# ...\n",
+    "# TO BE COMPLETED\n",
+    "# ..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Additionally, below it is also shown how to load RO-Crates from disk using `ro-crate-py`, as well as some examples on how to use that information. Assuming we have a RO-Crate root directory named `IAS/` as discussed above, we can load the RO-Crate and show some basic information as follows."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from rocrate.rocrate import ROCrate\n",
+    "\n",
+    "# Load RO-Crate\n",
+    "existingCratePath = 'IAS'\n",
+    "existingCrate = ROCrate(existingCratePath)\n",
+    "\n",
+    "# Print basic metadata\n",
+    "print(f'Name: \\n\\t{existingCrate.name}')\n",
+    "print(f'Type: \\n\\t{existingCrate.root_dataset.type}')\n",
+    "print(f'Description: \\n\\t{existingCrate.description}')\n",
+    "print(f'Author: \\n\\t{existingCrate.root_dataset.get(\"author\").get(\"name\")}')\n",
+    "print(f'Date Published: \\n\\t{existingCrate.datePublished.date()}')\n",
+    "print(f'License: \\n\\t{existingCrate.license.get(\"name\")}\\n')\n",
+    "\n",
+    "# Get info about the entities contained within the RO-Crate\n",
+    "print('\\nAll entities in the RO-Crate (and their type):\\n')\n",
+    "for entity in existingCrate.get_entities():\n",
+    "    print(entity.id, entity.type)\n",
+    "\n",
+    "print('\\nData entities for which a description is available:\\n')\n",
+    "for dataEntity in existingCrate.data_entities:\n",
+    "    if dataEntity.get(\"description\") is not None:\n",
+    "        print(f'Filename: {dataEntity.id}')\n",
+    "        print(f'\\t{dataEntity.get(\"description\")}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This can be used to build more complex operations. For example, we could define a class for FDO objects which can be constructed from RO-Crates, and for which we can check whether all required attributes are set: "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "class FDO(object):\n",
+    "    \"\"\"A basic FDO Python class.\"\"\"\n",
+    "\n",
+    "    def __init__(self, identifier, name, description, author, license, record=None):\n",
+    "        self.identifier = identifier\n",
+    "        self.name = name\n",
+    "        self.description = description\n",
+    "        self.author = author\n",
+    "        self.license = license\n",
+    "        self.record = record\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_crate(cls, rocratepath):\n",
+    "        \"\"\"Creates an FDO object from a RO-Crate file.\"\"\"\n",
+    "\n",
+    "        # Check that file/directory exists and load it\n",
+    "        if os.path.exists(rocratepath):\n",
+    "            rocrate = ROCrate(rocratepath)\n",
+    "        else:\n",
+    "            raise FileNotFoundError()\n",
+    "\n",
+    "        # Read properties\n",
+    "        identifier = rocrate.root_dataset.get(\"identifier\")\n",
+    "        name = rocrate.name\n",
+    "        description = rocrate.description\n",
+    "        author = rocrate.root_dataset.get(\"author\").get(\"name\")\n",
+    "        license = rocrate.license.get(\"name\")\n",
+    "\n",
+    "        return FDO(identifier, name, description, author, license)\n",
+    "\n",
+    "    def is_valid_fdo(self):\n",
+    "        \"\"\"Returns True if all required attributes are set.\"\"\"\n",
+    "\n",
+    "        return True if None in vars(self) else False\n",
+    "\n",
+    "\n",
+    "myFDO = FDO.from_crate(existingCratePath)\n",
+    "\n",
+    "# Check\n",
+    "print(f'Does myFDO comply with the FDO specifications? \\n\\t{myFDO.is_valid_fdo()}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
