Add some text to fdo_examples-basc.ipynb

--- a/fdo_examples_basic.ipynb
+++ b/fdo_examples_basic.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "source": [
     "## Example 1: DiSSCo Handle record\n",
-    "At a basic level, an FDO is composed of an FDO Record, which consists of a set of metadata attributes providing some essential information about the digital object, such as its persistent identifier, its type, a description, the author, etc. A cropped capture of a DiSSCo FDO Record is shown below (the complete record can be accessed through [this link](https://hdl.handle.net/20.5000.1025/E9Z-GCP-FVH?noredirect)):\n",
+    "At a basic level, an FDO is composed of an FDO Record, which consists of a set of metadata attributes providing some essential information about the digital object, such as its persistent identifier (PID), its type, a description, the author, etc. A cropped capture of a DiSSCo FDO Record is shown below (the complete record can be accessed through [this link](https://hdl.handle.net/20.5000.1025/E9Z-GCP-FVH?noredirect)):\n",
     "![DiSSCo FDO Record](images/DiSSCo_FDO_Record_example_cropped.png)\n",
     "A key element of FDOs is the use of PIDs, not only for the FDO itself, but also for the things referenced in the metadata attributes. For example, the type of digital object can be referenced by name (`digitalObjectName`) but also by PID (`digitalObjectType`). This enables machine-actionability. Potentially, those things could be FDOs themselves (having their own FDO Record, with PID and metadata attributes) and could be interlinked to one another in this way:"
    ],
@@ -80,7 +80,7 @@
    "source": [
     "# If we access it, we can see the Type's own metadata attributes\n",
     "exampleFDOType = exampleFDO.get_fdo_type()\n",
-    "print(f'FDO Type metadata:\\n\\t {exampleFDOType.keys()}')\n",
+    "print(f'FDO Type metadata attributes:\\n\\t {exampleFDOType.keys()}')\n",
     "\n",
     "# We can get further information about the Type in this way\n",
     "print(f'FDO Type description:\\n\\t {exampleFDOType[\"description\"]}')\n",
@@ -111,7 +111,7 @@
    "source": [
     "This interlinking of digital objects through PIDs through structured metadata is one of the core ideas behind FDOs and forms the basis for achieving interoperability (and the rest of the FAIR principles).\n",
     "\n",
-    "Nonetheless, FDO is a conceptual framework, which leads to many possible implementations. An example using RO-Crate is given below."
+    "In BioDT, FDOs could be used to link together datasets, models, software, etc. in a way that is machine-actionable and interoperable using structured metadata as shown here. However, FDO is a conceptual framework, which leads to many possible implementations. An different example using RO-Crate is given below."
    ],
    "metadata": {
     "collapsed": false
